# violingen

./: .gitignore  README.md  dataset_analysis_report.json  pyproject.toml  requirements.txt  run.ipynb  run.py  run_sample.py  setup.py
_archive/: stem_cleaner.py
tests/: test_model.py
violingen/: __init__.py  data.py  dataloader.py  generate.py  logging.py  model.py  orchestrator.py  post_processor.py  stem_splitter.py  train.py  utils.py
