[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["violingen"]

[project]
name = "violingen"
version = "0.1.0"
description = "A tiny autogenerative violin model"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.0.0",
    "soundfile>=0.12.0",
    "ipywidgets>=8.1.8",
    "demucs>=4.0.1",
    "matplotlib>=3.7.5",
    "torchcodec>=0.9.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv]
managed = true
